<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/tiles" />
    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="527dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"

        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.praveen.human.MainMenu"

        android:outlineProvider="none"
        android:useDefaultMargins="false">

        <ImageButton
            android:layout_width="152dp"
            android:layout_height="120dp"
            android:id="@+id/icoprof"
            android:adjustViewBounds="true"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:layout_row="0"
            android:layout_column="0"
            android:src="@mipmap/prof"
            android:contentDescription="@string/icoprof"/>

        <ImageButton
            android:layout_width="152dp"
            android:layout_height="120dp
            "
            android:adjustViewBounds="true"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:layout_row="0"
            android:layout_column="6"

            android:contentDescription="@string/iconew"
            android:src="@mipmap/list"
            android:id="@+id/icomylist" />


        <ImageButton
            android:layout_width="152dp"
            android:layout_height="120dp
            "
            android:adjustViewBounds="true"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:layout_row="1"
            android:layout_column="0"
            android:src="@mipmap/search"
            android:contentDescription="@string/icosearch"
            android:contextClickable="true"
            android:id="@+id/icosearch" />

        <ImageButton
            android:layout_width="152dp"
            android:layout_height="120dp
            "
            android:layout_row="1"
            android:adjustViewBounds="true"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:layout_column="6"
            android:src="@mipmap/msg"
            android:contentDescription="@string/icomylist"
            android:id="@+id/icomes" />

        <ImageButton
            android:layout_width="152dp"
            android:layout_height="120dp
            "
            android:layout_row="2"
            android:adjustViewBounds="true"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:layout_column="0"
            android:src="@mipmap/about"
            android:contentDescription="@string/icomes"
            android:id="@+id/icoinfo" />

        <ImageButton
            android:layout_width="152dp"
            android:layout_height="120dp
            "
            android:layout_row="2"
            android:adjustViewBounds="true"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:layout_column="6"
            android:src="@mipmap/logoff"
            android:contentDescription="@string/iconews"
            android:clickable="true"
            android:id="@+id/icologout" />

    </GridLayout>
</FrameLayout>
