<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
  >
    <ImageView
        android:scaleType="fitXY"
        android:layout_width="1282dp"
        android:layout_height="529dp"
        android:src="@mipmap/main" />
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.praveen.human.Login"
    android:weightSum="1">
    <ImageView
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:src="@mipmap/loginicon"
        android:layout_weight="0.30" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblogin"
        android:textColor="#ffffff"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUsername"
        android:inputType="text"
        android:foreground="#c9c5c5"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbpassword"
        android:textColor="#ffffff" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:foreground="#c9c5c5"
        android:textColor="#ffffff" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bLogin"
        android:text="@string/lblogin"/>
    <TextView
        android:id="@+id/tvregisterlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/lblreghere"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
</FrameLayout>
